Add audiobookshelf to homepage
Configure the homepage to include AudioBookShelf.
Fix the homepage docker integration so can see stats.

--- a/prep/docker.yaml
+++ b/prep/docker.yaml
@@ -2,8 +2,8 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/en/configs/docker/
 
-docker:
-  host: dockerproxy
+my-docker:
+  host: locip
   port: 2375
 
 # my-docker:
