Add Jellyfin and Flaresolverr
Plex hasn't been working as well, particuarly the Android Apps, so wanted to try Jellyfin.
Added it, configured it to enable hardware de(en)coding and added it to the homepage.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     # ----------------------------------------
     audiobookshelf:
         image: ghcr.io/advplyr/audiobookshelf:latest
+        container_name: audiobookshelf
         restart: unless-stopped
         ports:
         - ${IP_ADDRESS}:13378:80
@@ -84,6 +85,24 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock:ro # Mounted as read-only
 
     # ----------------------------------------
+    # FLARESOLVERR
+    # ----------------------------------------
+    flaresolverr:
+        image: ghcr.io/flaresolverr/flaresolverr:latest
+        container_name: flaresolverr
+        restart: unless-stopped
+        network_mode: "bridge"
+        environment:
+            - LOG_LEVEL=${LOG_LEVEL:-info}
+            - LOG_HTML=${LOG_HTML:-false}
+            - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
+        ports:
+            - '${IP_ADDRESS}:8191:8191'
+        volumes:
+            - /etc/localtime:/etc/localtime:ro
+            - ./flaresolverr:/storage
+
+    # ----------------------------------------
     # GLANCES
     # ----------------------------------------
     glances:
@@ -138,6 +157,30 @@ services:
             - './jackett:/config'
             - '${DLDIR}/complete:/downloads'
             - '/etc/localtime:/etc/localtime:ro'
+
+    # ----------------------------------------
+    # JELLYFIN
+    # ----------------------------------------
+    jellyfin:
+        image: jellyfin/jellyfin:latest
+        container_name: jellyfin
+        restart: unless-stopped
+        network_mode: "bridge"
+        user: "${PUID}:${PGID}"
+        group_add:
+            - "${RENDERGRP}"
+            - "${VIDEOGRP}"
+        ports:
+            - '${IP_ADDRESS}:8096:8096'
+        volumes:
+            - './jellyfin:/config'
+            - '${MOVIEDIR}:/media/movies'
+            - '${MUSICDIR}:/media/music'
+            - '${TVDIR}:/media/tv'
+            - '${BOOKDIR}:/media/books'
+            - '/etc/localtime:/etc/localtime:ro'
+        devices:
+            - /dev/dri/renderD128:/dev/dri/renderD128
 
     # ----------------------------------------
     # LazyLibrarian
@@ -296,7 +339,7 @@ services:
     # ----------------------------------------
     plex:
         container_name: plex
-        image: plexinc/pms-docker:${PMSTAG}
+        image: plexinc/pms-docker:latest
         restart: unless-stopped
         network_mode: "host"
         ports:
@@ -325,7 +368,7 @@ services:
             - '/etc/localtime:/etc/localtime:ro'
 
     # ----------------------------------------
-    # Plex Meta Manager
+    # Kometa (Plex Meta Manager)
     # ----------------------------------------
     kometa:
         image: kometateam/kometa
@@ -334,6 +377,7 @@ services:
         network_mode: "bridge"
         volumes:
             - './plex-meta-manager:/config:rw'
+            - '/etc/localtime:/etc/localtime:ro'
         depends_on:
             - plex
 
